--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "appDisplayName": "Hassio",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
-    "requestedPermissions": [],
+    "requestedPermissions": [
+      "access_internet"
+    ],
     "buildTargets": [
       "atlas",
       "vulcan"
