--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@fitbit/sdk": "^4.2.1",
-    "@fitbit/sdk-cli": "^1.8.0-pre.0"
+    "@fitbit/sdk-cli": "^1.8.0-pre.0",
+    "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "fitbit-sdk-types": "^6.0.1",
+    "typescript": "^4.1.3"
   },
   "fitbit": {
     "appUUID": "abfa3ee5-7ff5-47c7-acb3-d9e3b6ea6ff0",
