--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/@fitbit/sdk/sdk-tsconfig.json"
+  "extends": "./node_modules/@fitbit/sdk/sdk-tsconfig.json",
+  "compilerOptions": {
+    "lib": ["es5", "es2015.promise", "dom"]
+  }
 }
