--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "fitbit": {
     "appUUID": "abfa3ee5-7ff5-47c7-acb3-d9e3b6ea6ff0",
     "appType": "app",
-    "appDisplayName": "Hassio",
+    "appDisplayName": "Home Assistant",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
     "requestedPermissions": [
