--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "license": "Apache",
   "devDependencies": {
-    "@fitbit/sdk": "^4.2.2",
+    "@fitbit/sdk": "^5.0.2",
     "@fitbit/sdk-cli": "^1.8.0-pre.0",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.27.0",
-    "fitbit-sdk-types": "^6.0.1",
+    "fitbit-sdk-types": "^6.0.3",
     "typescript": "^4.1.3"
   },
   "fitbit": {
@@ -23,7 +23,7 @@
       "access_internet"
     ],
     "buildTargets": [
-      "mira"
+      "atlas"
     ],
     "i18n": {},
     "defaultLanguage": "en-US"
